# scikit_build_example

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cibw-cc.yaml  conda.yml  enscripten.yaml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: conf.py  python_example.rst
src/: main.cpp
src/scikit_build_example/: __init__.py  __init__.pyi
tests/: test.py  test_basic.py
