[metadata]
name = scikit_build_example
version = 0.0.1
author = Henry Schreiner
license = MIT
description = a minimal example package (with pybind11)
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
